fix: Fix return highRange in lab investigation details